--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:e2e",
+    "test:e2e": "cypress run --headless",
+    "test:e2e:watch": "npx nodemon -e js,jsx,ts,tsx,css,scss --exec 'npm run test:e2e'"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/Eduardclt01/frontend-upskill#readme",
   "devDependencies": {
+    "cypress": "^7.4.0",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.34.0"
   }
