--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
     "test": "npm run test:e2e",
+    "test:watch": "npm run test:e2e:watch",
     "test:e2e": "cypress run --headless",
-    "test:e2e:watch": "npx nodemon -e js,jsx,ts,tsx,css,scss --exec 'npm run test:e2e'"
+    "test:e2e:watch": "nodemon -e html,js,jsx,ts,tsx,css,scss --exec 'npm run test:e2e'"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/Eduardclt01/frontend-upskill#readme",
   "devDependencies": {
     "cypress": "^7.4.0",
+    "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.34.0"
   }
