--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel src/index.html --port 1234",
     "build": "parcel build src/index.html",
     "test": "npm run test:e2e",
     "test:watch": "npm run test:e2e:watch",
